--- a/dog.html
+++ b/dog.html
@@ -32,8 +32,8 @@
           <span data-bind="text: activeDog.walked">No</span>
         </div>
         <div class="col-30">
-          <a href="#" class="button button-raised button-fill color-teal" style="text-transform: none" data-bind="click: walkButton, visible: activeDog.walked() != 'Yes'"><span data-bind="text: walkStatus()"></span></a>
-          <a href="#" class="button button-raised button-fill color-gray" style="text-transform: none" data-bind="click: walkButton, visible: activeDog.walked() == 'Yes'"><span data-bind="text: walkStatus()"></span></a>
+          <a href="#" class="button button-raised button-fill color-teal" style="text-transform: none" data-bind="click: confirmWalk, visible: activeDog.walked() != 'Yes'"><span data-bind="text: walkStatus()"></span></a>
+          <a href="#" class="button button-raised button-fill color-gray" style="text-transform: none" data-bind="click: confirmWalk, visible: activeDog.walked() == 'Yes'"><span data-bind="text: walkStatus()"></span></a>
         </div>
       </div>
       <div class="row">
@@ -44,7 +44,7 @@
           <span data-bind="text: moment(activeDog.showered()).format('D MMM')"></span><br><span class="color-gray" data-bind="text: daysAgoFromNow(activeDog.showered())"></span>
         </div>
         <div class="col-30">
-          <a href="#" class="button button-raised button-fill color-indigo" style="text-transform: none" data-bind="click: showerDog">Shower</a>
+          <a href="#" class="button button-raised button-fill color-indigo" style="text-transform: none" data-bind="click: confirmShower">Shower</a>
         </div>
       </div>
     </div>
