--- a/dog.html
+++ b/dog.html
@@ -15,10 +15,8 @@
   <div class="page-content">
     <!-- Image carousel -->
     <div class="swiper-container swiper-init" data-pagination=".swiper-pagination">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide"><img data-bind="attr: { src: constructImgPath(activeDog) }" width="100%"></div>
-        <!--<div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide"><img src="http://placehold.it/400x300" width="100%"></div>-->
+      <div class="swiper-wrapper" data-bind="foreach: activeDog.photos">
+        <div class="swiper-slide"><img data-bind="attr: { src: $data }" width="100%"></div>
       </div>
       <div class="swiper-pagination"></div><!-- populated automatically -->
     </div>
